// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LocationForm form validation works for core instance: location Tags does not have error message 1`] = `"Unit Group(optional) Enter a location group name"`;

exports[`LocationForm form validation works for eusm instance: location Tags does not have error message 1`] = `"Unit Group(optional) Enter a location group name"`;

exports[`LocationForm renders correctly: cancel button 1`] = `
<button
  className="ant-btn ant-btn-dashed"
  id="cancel"
  onClick={[Function]}
  type="button"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Cancel
  </span>
</button>
`;

exports[`LocationForm renders correctly: externalId field 1`] = `
<input
  className="ant-input"
  name="externalId"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Select status"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: externalId label 1`] = `
<label
  className="ant-form-item-required-mark-optional"
  title="External ID"
>
  External ID
  <span
    className="ant-form-item-optional"
  >
    (optional)
  </span>
</label>
`;

exports[`LocationForm renders correctly: geometry field 1`] = `null`;

exports[`LocationForm renders correctly: geometry label 1`] = `
<label
  className="ant-form-item-required-mark-optional"
  title="geometry"
>
  geometry
  <span
    className="ant-form-item-optional"
  >
    (optional)
  </span>
</label>
`;

exports[`LocationForm renders correctly: instance field 1`] = `
<input
  className="ant-input"
  name="instance"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  type="text"
  value="core"
/>
`;

exports[`LocationForm renders correctly: instance label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Instance"
>
  Instance
</label>
`;

exports[`LocationForm renders correctly: isJurisdiction field 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value={false}
  />,
  <input
    checked={false}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value={true}
  />,
]
`;

exports[`LocationForm renders correctly: isJurisdiction label 1`] = `
<label
  className="ant-form-item-required-mark-optional"
  title="Location Category"
>
  Location Category
  <span
    className="ant-form-item-optional"
  >
    (optional)
  </span>
</label>
`;

exports[`LocationForm renders correctly: locationTags field 1`] = `
<input
  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
  aria-autocomplete="list"
  aria-controls="rc_select_TEST_OR_SSR_list"
  aria-haspopup="listbox"
  aria-owns="rc_select_TEST_OR_SSR_list"
  autoComplete="off"
  className="ant-select-selection-search-input"
  id="rc_select_TEST_OR_SSR"
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onPaste={[Function]}
  readOnly={true}
  role="combobox"
  style={
    Object {
      "opacity": 0,
    }
  }
  type="search"
  unselectable="on"
  value=""
/>
`;

exports[`LocationForm renders correctly: locationTags label 1`] = `
<label
  className="ant-form-item-required-mark-optional"
  title="Unit Group"
>
  Unit Group
  <span
    className="ant-form-item-optional"
  >
    (optional)
  </span>
</label>
`;

exports[`LocationForm renders correctly: name field 1`] = `
<input
  className="ant-input"
  name="name"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Enter a location name"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: name label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Name"
>
  Name
</label>
`;

exports[`LocationForm renders correctly: parentId field 1`] = `null`;

exports[`LocationForm renders correctly: parentId label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Parent"
>
  Parent
</label>
`;

exports[`LocationForm renders correctly: serviceTypes field 1`] = `
<input
  aria-activedescendant="rc_select_TEST_OR_SSR_list_0"
  aria-autocomplete="list"
  aria-controls="rc_select_TEST_OR_SSR_list"
  aria-haspopup="listbox"
  aria-owns="rc_select_TEST_OR_SSR_list"
  autoComplete="off"
  className="ant-select-selection-search-input"
  id="rc_select_TEST_OR_SSR"
  onChange={[Function]}
  onCompositionEnd={[Function]}
  onCompositionStart={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  onPaste={[Function]}
  readOnly={true}
  role="combobox"
  style={
    Object {
      "opacity": 0,
    }
  }
  type="search"
  unselectable="on"
  value=""
/>
`;

exports[`LocationForm renders correctly: serviceTypes label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Type"
>
  Type
</label>
`;

exports[`LocationForm renders correctly: status field 1`] = `
Array [
  <input
    checked={true}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="Active"
  />,
  <input
    checked={false}
    className="ant-radio-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    type="radio"
    value="InActive"
  />,
]
`;

exports[`LocationForm renders correctly: status label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Status"
>
  Status
</label>
`;

exports[`LocationForm renders correctly: submit button 1`] = `
<button
  className="ant-btn ant-btn-primary"
  disabled={false}
  id="submit"
  onClick={[Function]}
  type="submit"
>
  <LoadingIcon
    existIcon={false}
    loading={false}
    prefixCls="ant-btn"
  >
    <CSSMotion
      motionName="ant-btn-loading-icon-motion"
      onAppearActive={[Function]}
      onAppearStart={[Function]}
      onEnterActive={[Function]}
      onEnterStart={[Function]}
      onLeaveActive={[Function]}
      onLeaveStart={[Function]}
      removeOnLeave={true}
      visible={false}
    >
      <DomWrapper />
    </CSSMotion>
  </LoadingIcon>
  <span
    key=".0"
  >
    Save
  </span>
</button>
`;

exports[`LocationForm renders correctly: type field 1`] = `
<input
  className="ant-input"
  name="type"
  onBlur={[Function]}
  onChange={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  placeholder="Select type"
  type="text"
  value=""
/>
`;

exports[`LocationForm renders correctly: type label 1`] = `
<label
  className="ant-form-item-required ant-form-item-required-mark-optional"
  title="Type"
>
  Type
</label>
`;
